build_output_utf8.txt

> Configure project :
Java: 17.0.15, JVM: 17.0.15+6 (Eclipse Adoptium), Arch: amd64

> Task :compileJava FAILED
.\gradlew.bat : C:\Users\chill\Down
loads\ZooTycoonSimulation\src\main\
java\com\example\simulation\ZooComm
and.java:269: error: ';' expected
At line:1 char:1
+ .\gradlew.bat compileJava > 
build_output.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotS 
   pecified: (C:\Users\chill\...r  
  : ';' expected:String) [], Rem   
 oteException
    + FullyQualifiedErrorId : Nati 
   veCommandError
 
                                   
                                   
                                   
                                   
                                   
 net.minecraft.commands.arguments.R
esourceLocationArgument.getId(ctx, 
"filter")))))))))));
                                   
                                   
                                   
                                   
                                   
                                   
                                   
                  ^
1 error

FAILURE: Build failed with an 
exception.

* What went wrong:
Execution failed for task 
':compileJava'.
> Compilation failed; see the 
compiler error output for details.

* Try:
> Run with --info option to get 
more log output.
> Run with --scan to get full 
insights.

BUILD FAILED in 6s
1 actionable task: 1 executed
